--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -180,3 +180,10 @@ textarea.form-control {
   color: #fff;
 
 }
+
+/********************** FOOTER ************************/
+
+#footer{
+    margin-top:1%;
+    font-style: italic;
+}
